[package]
name = "anychain-ethereum-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anychain-core = { path = "../../crates/anychain-core" }
anychain-ethereum = { path = "../../crates/anychain-ethereum" }
clap = { workspace = true }
rlp = { workspace = true }
primitive-types = { workspace = true }
libsecp256k1 = { workspace = true }

[lints]
workspace = true